po: update po/de_DE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -11,7 +11,7 @@
 # Cibes <cibessl@gmail.com>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2015
 # pantteri, 2013
-# Ettore Atalan <atalanttore@googlemail.com>, 2015
+# Ettore Atalan <atalanttore@googlemail.com>, 2015-2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # gnpma100 <gnpma100@gmail.com>, 2014
@@ -49,8 +49,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-11 14:36+0000\n"
-"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
+"PO-Revision-Date: 2016-08-16 08:46+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -178,16 +178,16 @@ msgstr "ACL Name"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "Deny ACL?"
-msgstr ""
+msgstr "ACL verweigern?"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Entity"
-msgstr ""
+msgstr "ACL-Entität"
 
 #: CRM/ACL/DAO/ACL.php CRM/Core/DAO/EntityTag.php
 #: CRM/Core/DAO/RecurringEntity.php
 msgid "Entity ID"
-msgstr ""
+msgstr "Entitätskennung"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Operation"
@@ -220,7 +220,7 @@ msgstr "Änderungsdatum"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "Entity Role"
-msgstr ""
+msgstr "Entitätsrolle"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Role ID"
@@ -238,7 +238,7 @@ msgstr "Entitäts-Tabelle"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Entity ID"
-msgstr ""
+msgstr "ACL-Entitätskennung"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Entity Role is Active"
@@ -8094,23 +8094,23 @@ msgstr "Vorgestern"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous Year"
-msgstr "Voriges Jahr"
+msgstr "Vorheriges Jahr"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous Fiscal Year"
-msgstr "Voriges Geschäftsjahr"
+msgstr "Vorheriges Geschäftsjahr"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous Quarter"
-msgstr "Voriges Quartal"
+msgstr "Vorheriges Quartal"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous Month"
-msgstr "Voriger Monat"
+msgstr "Vorheriger Monat"
 
 #: CRM/Core/Form/Date.php
 msgid "Previous Week"
-msgstr "Vorige Woche"
+msgstr "Vorherige Woche"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Year"
@@ -8118,19 +8118,19 @@ msgstr "Zum Ende des Vorjahrs"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Quarter"
-msgstr "Zum Ende des vorigen Quartals"
+msgstr "Bis zum Ende des vorherigen Quartals"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Month"
-msgstr "Zum Ende des vorigen Monats"
+msgstr "Bis zum Ende des vorherigen Monats"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Week"
-msgstr "Zum Ende der vorigen Woche"
+msgstr "Bis zum Ende der vorherigen Woche"
 
 #: CRM/Core/Form/Date.php
 msgid "To End of Previous Day"
-msgstr "Zum Ende des vorigen Tages"
+msgstr "Bis zum Ende des vorherigen Tages"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Year"
@@ -8138,15 +8138,15 @@ msgstr "Ab dem Ende des Vorjahres"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Quarter"
-msgstr "Ab dem Ende des vorigen Quartals"
+msgstr "Ab dem Ende des vorherigen Quartals"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Month"
-msgstr "Ab dem Ende des vorigen Monats"
+msgstr "Ab dem Ende des vorherigen Monats"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Week"
-msgstr "Ab dem Ende der vorigen Woche"
+msgstr "Ab dem Ende der vorherigen Woche"
 
 #: CRM/Core/Form/Date.php
 msgid "From Start of Current Year"
@@ -18808,7 +18808,7 @@ msgstr ""
 
 #: templates/CRM/Price/Form/LineItem.tpl
 msgid "Amount of<br>Current Payment "
-msgstr ""
+msgstr "Betrag der<br>Aktuellen Zahlung"
 
 #: templates/CRM/Price/Form/LineItem.tpl templates/CRM/Price/Page/LineItem.tpl
 msgid "Total Participants"
@@ -18931,7 +18931,7 @@ msgstr ""
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid "Negative Options"
-msgstr ""
+msgstr "Negative Optionen"
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid ""
@@ -19023,7 +19023,7 @@ msgstr "Student"
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid "Senior"
-msgstr ""
+msgstr "Senior"
 
 #: templates/CRM/Price/Page/Field.hlp
 msgid "Join your local chapter"
@@ -19087,7 +19087,7 @@ msgstr "Vorschau (alle Felder)"
 
 #: templates/CRM/Price/Page/Field.tpl templates/CRM/Price/Page/Option.tpl
 msgid "Tax Label"
-msgstr ""
+msgstr "Steuerbezeichnung"
 
 #: templates/CRM/Price/Page/Field.tpl
 msgid "View Price Options"
@@ -20371,7 +20371,7 @@ msgstr "Name/Email"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "Restore CiviCRM Menu"
-msgstr ""
+msgstr "CiviCRM-Menü wiederherstellen"
 
 #: templates/CRM/common/notifications.tpl
 msgid "close"
@@ -21247,7 +21247,7 @@ msgstr "Rechnung per E-Mail versandt."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Contact Merged"
-msgstr ""
+msgstr "Kontakt zusammengeführt"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Female"
@@ -22070,7 +22070,7 @@ msgstr "Voicemail hinterlassen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Low"
-msgstr ""
+msgstr "Niedrig"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Simple Event Name Badge"
@@ -24842,11 +24842,11 @@ msgstr ""
 
 #: CRM/Activity/Task.php
 msgid "Email - send now"
-msgstr ""
+msgstr "E-Mail - jetzt senden"
 
 #: CRM/Activity/Task.php
 msgid "SMS - send reply"
-msgstr ""
+msgstr "SMS - Antwort senden"
 
 #: CRM/Activity/Task.php
 msgid "Tag - add to activities"
@@ -24866,7 +24866,7 @@ msgstr ""
 
 #: CRM/Contact/ActionMapping.php
 msgid "Date Field"
-msgstr ""
+msgstr "Datumsfeld"
 
 #: CRM/Contact/ActionMapping.php
 msgid "Annual Options"
@@ -24961,7 +24961,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Min Age"
-msgstr ""
+msgstr "Mindestalter"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Please enter a positive integer"
@@ -24969,7 +24969,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Max Age"
-msgstr ""
+msgstr "Höchstalter"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Age as of Date"
@@ -25145,7 +25145,7 @@ msgstr ""
 #: CRM/Core/BAO/UFField.php CRM/Core/OptionValue.php CRM/Core/SelectValues.php
 #: CRM/Export/BAO/Export.php xml/templates/civicrm_data.tpl
 msgid "Payment Method"
-msgstr ""
+msgstr "Zahlungsmethode"
 
 #: CRM/Core/Config/MagicMerge.php
 msgid ""
@@ -25167,7 +25167,7 @@ msgstr ""
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Schedule"
-msgstr ""
+msgstr "Planen"
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Action Date And Time"
@@ -25175,7 +25175,7 @@ msgstr ""
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Error?"
-msgstr ""
+msgstr "Fehler?"
 
 #: CRM/Core/DAO/ActionMapping.php
 msgid "Action Mapping ID"
@@ -25243,7 +25243,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Log.php
 msgid "Log ID"
-msgstr ""
+msgstr "Protokollkennung"
 
 #: CRM/Core/DAO/Log.php
 msgid "Entity ID "
@@ -25283,7 +25283,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Menu.php
 msgid "Menu ID"
-msgstr ""
+msgstr "Menükennung"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Domain"
@@ -25291,15 +25291,15 @@ msgstr "Organisation"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Arguments"
-msgstr ""
+msgstr "Argumente"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Menu Title"
-msgstr ""
+msgstr "Menütitel"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Component"
-msgstr ""
+msgstr "Komponente"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Public?"
@@ -25319,7 +25319,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Navigation.php
 msgid "Navigation ID"
-msgstr ""
+msgstr "Navigationskennung"
 
 #: CRM/Core/DAO/Navigation.php
 msgid "Navigation Domain"
@@ -25335,7 +25335,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Navigation.php
 msgid "Required Permission"
-msgstr ""
+msgstr "Erforderliche Berechtigung"
 
 #: CRM/Core/DAO/Navigation.php
 msgid "Navigation parent ID"
@@ -25363,7 +25363,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Persistent.php
 msgid "Is Configuration?"
-msgstr ""
+msgstr "Ist Konfiguration?"
 
 #: CRM/Core/DAO/PreferencesDate.php
 msgid "Date Preference ID"
@@ -25403,7 +25403,7 @@ msgstr ""
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Is Selected"
-msgstr ""
+msgstr "Ist ausgewählt"
 
 #: CRM/Core/DAO/StateProvince.php
 msgid "State ID"
@@ -25423,7 +25423,7 @@ msgstr ""
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Ignore Severity"
-msgstr ""
+msgstr "Schwere ignorieren"
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Status Preferences"
@@ -25435,23 +25435,23 @@ msgstr ""
 
 #: CRM/Core/DAO/Timezone.php
 msgid "Timezone ID"
-msgstr ""
+msgstr "Zeitzonenkennung"
 
 #: CRM/Core/DAO/Timezone.php
 msgid "Timezone Name"
-msgstr ""
+msgstr "Zeitzonenname"
 
 #: CRM/Core/DAO/Timezone.php
 msgid "Timezone Abbreviation"
-msgstr ""
+msgstr "Zeitzonenabkürzung"
 
 #: CRM/Core/DAO/Timezone.php
 msgid "GMT Name of Timezone"
-msgstr ""
+msgstr "GMT-Name der Zeitzone"
 
 #: CRM/Core/DAO/Timezone.php
 msgid "GMT Offset"
-msgstr ""
+msgstr "GMT-Abweichung"
 
 #: CRM/Core/DAO/Worldregion.php
 msgid "World Region ID"
@@ -25463,7 +25463,7 @@ msgstr ""
 
 #: CRM/Core/Form/ShortCode.php
 msgid "User Dashboard"
-msgstr ""
+msgstr "Benutzerübersicht"
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Event Page"
@@ -25471,7 +25471,7 @@ msgstr ""
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Petition"
-msgstr ""
+msgstr "Petition"
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Event Info Page"
@@ -25483,11 +25483,11 @@ msgstr ""
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Live Mode"
-msgstr ""
+msgstr "Live-Modus"
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Test Drive"
-msgstr ""
+msgstr "Testlauf"
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Search/Public Directory"
@@ -25501,7 +25501,7 @@ msgstr ""
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Don't override"
-msgstr ""
+msgstr "Nicht überschreiben"
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Override page content"
@@ -25519,7 +25519,7 @@ msgstr ""
 
 #: CRM/Core/Payment/Dummy.php
 msgid "transaction failed"
-msgstr ""
+msgstr "Transaktion fehlgeschlagen"
 
 #: CRM/Core/Payment/FirstData.php
 msgid "First Data - recurring payments not implemented"
@@ -25574,7 +25574,7 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "Previous 2"
-msgstr ""
+msgstr "Vorherige 2"
 
 #: CRM/Core/SelectValues.php
 msgid "Prior to Previous"
@@ -25598,15 +25598,15 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "Last 3"
-msgstr ""
+msgstr "Letzte 3"
 
 #: CRM/Core/SelectValues.php
 msgid "Last 2"
-msgstr ""
+msgstr "Letzte 2"
 
 #: CRM/Core/SelectValues.php
 msgid "This"
-msgstr ""
+msgstr "Diese"
 
 #: CRM/Core/SelectValues.php
 msgid "To End of"
@@ -25650,7 +25650,7 @@ msgstr ""
 
 #: CRM/Dedupe/DAO/RuleGroup.php
 msgid "Rule Group ID"
-msgstr ""
+msgstr "Regelgruppenkennung"
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact(s) were merged."
@@ -25720,7 +25720,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Case.php
 msgid "Read more about this warning"
-msgstr ""
+msgstr "Lesen Sie mehr über diese Warnung"
 
 #: CRM/Utils/Check/Component/Case.php
 msgid ""
@@ -25737,7 +25737,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "PHP Out-of-Date"
-msgstr ""
+msgstr "PHP auf einem älteren Stand"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
@@ -25747,7 +25747,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "PHP Up-to-Date"
-msgstr ""
+msgstr "PHP auf dem neuesten Stand"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Timestamp Mismatch"
@@ -25781,7 +25781,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Complete Setup"
-msgstr ""
+msgstr "Vollständige Einrichtung"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Please configure a <a href=\"%1\">default mailbox</a> for CiviMail."
@@ -25801,7 +25801,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Last cron run at %1."
-msgstr ""
+msgstr "Letzte cron-Ausführung um %1."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "No cron runs have been recorded."
@@ -25813,7 +25813,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Cron Not Running"
-msgstr ""
+msgstr "Cron läuft nicht"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
@@ -25827,7 +25827,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Directory not writable"
-msgstr ""
+msgstr "Verzeichnis nicht schreibbar"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
@@ -26450,7 +26450,7 @@ msgstr "aktuelle Woche"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar month"
-msgstr ""
+msgstr "Dieser Kalendermonat"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This quarter"
@@ -26466,23 +26466,23 @@ msgstr "aktuelles Kalenderjahr"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous week"
-msgstr ""
+msgstr "Vorherige Woche"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous calendar month"
-msgstr ""
+msgstr "Vorheriger Kalendermonat"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous quarter"
-msgstr ""
+msgstr "Vorheriges Quartal"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous fiscal year"
-msgstr ""
+msgstr "Vorheriges Geschäftsjahr"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous calendar year"
-msgstr ""
+msgstr "Vorheriges Kalenderjahr"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 7 days including today"
@@ -26514,23 +26514,23 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next week"
-msgstr ""
+msgstr "Nächste Woche"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next calendar month"
-msgstr ""
+msgstr "Nächster Kalendermonat"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next quarter"
-msgstr ""
+msgstr "Nächstes Quartal"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next fiscal year"
-msgstr ""
+msgstr "Nächstes Geschäftsjahr"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next calendar year"
-msgstr ""
+msgstr "Nächstes Kalenderjahr"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 7 days including today"
@@ -26554,95 +26554,95 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current week to-date"
-msgstr ""
+msgstr "Aktuelle Woche bis heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current calendar month to-date"
-msgstr ""
+msgstr "Aktueller Kalendermonat bis heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current quarter to-date"
-msgstr ""
+msgstr "Aktuelles Quartal bis heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current calendar year to-date"
-msgstr ""
+msgstr "Aktuelles Kalenderjahr bis heute"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of yesterday"
-msgstr ""
+msgstr "Bis Gestern"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous week"
-msgstr ""
+msgstr "Bis zum Ende der vorherigen Woche"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous calendar month"
-msgstr ""
+msgstr "Bis zum Ende des vorherigen Kalendermonats"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous quarter"
-msgstr ""
+msgstr "Bis zum Ende des vorherigen Quartals"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of previous calendar year"
-msgstr ""
+msgstr "Bis zum Ende des vorherigen Kalenderjahres"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current day"
-msgstr ""
+msgstr "Seit Beginn des aktuellen Tages"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current week"
-msgstr ""
+msgstr "Seit Beginn der aktuellen Woche"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current calendar month"
-msgstr ""
+msgstr "Seit Beginn des aktuellen Kalendermonats"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current quarter"
-msgstr ""
+msgstr "Seit Beginn des aktuellen Quartals"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From start of current calendar year"
-msgstr ""
+msgstr "Seit Beginn des aktuellen Kalenderjahres"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current week"
-msgstr ""
+msgstr "Bis zum Ende der aktuellen Woche"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar month"
-msgstr ""
+msgstr "Bis zum Ende des aktuellen Kalendermonats"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current quarter"
-msgstr ""
+msgstr "Bis zum Ende des aktuellen Quartals"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar year"
-msgstr ""
+msgstr "Bis zum Ende des aktuellen Jahres"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 days"
-msgstr ""
+msgstr "Vorherige 2 Tage"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 weeks"
-msgstr ""
+msgstr "Vorherige 2 Wochen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 calendar months"
-msgstr ""
+msgstr "Vorherige 2 Kalendermonate"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 quarters"
-msgstr ""
+msgstr "Vorherige 2 Quartale"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous 2 calendar years"
-msgstr ""
+msgstr "Vorherige 2 Kalenderjahre"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Day prior to yesterday"
@@ -26666,15 +26666,15 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous week"
-msgstr ""
+msgstr "Ab dem Ende der vorherigen Woche"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar month"
-msgstr ""
+msgstr "Ab dem Ende des vorherigen Kalendermonats"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous quarter"
-msgstr ""
+msgstr "Ab dem Ende des vorherigen Quartals"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar year"
@@ -26723,11 +26723,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Transferred"
-msgstr ""
+msgstr "Überwiesen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "CiviCRM Update Check"
-msgstr ""
+msgstr "CiviCRM-Aktualisierungsprüfung"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
@@ -26804,4 +26804,4 @@ msgstr ""
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Migrate Settings to %1"
-msgstr ""
+msgstr "Einstellungen zu %1 migrieren"
