--- a/po/de_DE/event.po
+++ b/po/de_DE/event.po
@@ -10,6 +10,7 @@
 # Danny Liebig <danny.liebig@hotmail.de>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2013
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
+# Ettore Atalan <atalanttore@googlemail.com>, 2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # gnpma100 <gnpma100@gmail.com>, 2014
@@ -31,8 +32,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-11 14:02+0000\n"
-"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
+"PO-Revision-Date: 2016-08-16 08:24+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -353,7 +354,7 @@ msgstr "Veranstaltung Vorlage Titel"
 
 #: CRM/Event/DAO/Event.php
 msgid "Created By Contact ID"
-msgstr ""
+msgstr "Erstellt von Kontaktkennung"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Created Date"
