po: update po/de_DE/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/contribute.po
+++ b/po/de_DE/contribute.po
@@ -7,6 +7,7 @@
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Cibes <cibessl@gmail.com>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
+# Ettore Atalan <atalanttore@googlemail.com>, 2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2013-2015
@@ -25,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-16 08:48+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -308,11 +309,11 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Credit Card Only?"
-msgstr ""
+msgstr "Ist nur Kreditkarte?"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Monetary"
-msgstr ""
+msgstr "Ist monetär"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Recurring"
@@ -320,7 +321,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Confirmation Page?"
-msgstr ""
+msgstr "Bestätigungsseite?"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Recurring Frequency"
@@ -358,7 +359,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Default Amount"
-msgstr ""
+msgstr "Standardbetrag"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
@@ -5029,7 +5030,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/PremiumsProduct.php
 msgid "Product"
-msgstr ""
+msgstr "Produkt"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Widget ID"
@@ -5049,23 +5050,23 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Title Color"
-msgstr ""
+msgstr "Titelfarbe"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Button Colour"
-msgstr ""
+msgstr "Schaltflächenfarbe"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Bar Color"
-msgstr ""
+msgstr "Balkenfarbe"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Main Text Color"
-msgstr ""
+msgstr "Haupttextfarbe"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Main Colour"
-msgstr ""
+msgstr "Hauptfarbe"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Backgroup Color"
@@ -5073,7 +5074,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Other Backgroun Colour"
-msgstr ""
+msgstr "Andere Hintergrundfarbe"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "About Link Colour"
@@ -5112,7 +5113,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Invalid Membership"
-msgstr ""
+msgstr "Ungültige Mitgliedschaft"
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Please select one of the memberships."
@@ -5151,7 +5152,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Contact and Payment Method"
-msgstr ""
+msgstr "Kontakt und Zahlungsmethode"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 msgid ""
@@ -5248,7 +5249,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "# Completed"
-msgstr ""
+msgstr "# Abgeschlossen"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Avg"
@@ -5262,27 +5263,27 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "INVOICE"
-msgstr ""
+msgstr "RECHNUNG"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Invoice Date:"
-msgstr ""
+msgstr "Rechnungsdatum:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Invoice Number:"
-msgstr ""
+msgstr "Rechnungsnummer:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Reference:"
-msgstr ""
+msgstr "Referenz:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Amount %1"
-msgstr ""
+msgstr "Betrag %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "No %1"
-msgstr ""
+msgstr "Nr. %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Sub Total"
@@ -5290,7 +5291,7 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "TOTAL %1 %2%"
-msgstr ""
+msgstr "GESAMT %1 %2%"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "TOTAL NO %1"
@@ -5298,7 +5299,7 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "TOTAL %1"
-msgstr ""
+msgstr "GESAMT %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "LESS Amount Credited"
@@ -5318,19 +5319,19 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "PAYMENT ADVICE"
-msgstr ""
+msgstr "ZAHLUNGSHINWEIS"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "To: "
-msgstr ""
+msgstr "An:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Customer: "
-msgstr ""
+msgstr "Kunde:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Invoice Number: "
-msgstr ""
+msgstr "Rechnungsnummer:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Amount Due:"
@@ -5358,11 +5359,11 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "REMAINING CREDIT"
-msgstr ""
+msgstr "VERBLEIBENDER KREDIT"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "CREDIT ADVICE"
-msgstr ""
+msgstr "KREDITHINWEIS"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid ""
@@ -5372,7 +5373,7 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Customer:"
-msgstr ""
+msgstr "Kunde:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Credit Note#:"
@@ -5380,4 +5381,4 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Credit Amount:"
-msgstr ""
+msgstr "Kreditbetrag:"
