po: update po/es_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -42,7 +42,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-28 15:01+0000\n"
+"PO-Revision-Date: 2016-08-16 15:01+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -1205,8 +1205,8 @@ msgstr "Eliminado"
 #: CRM/Activity/Form/Task/Delete.php
 msgid "1 could not be deleted."
 msgid_plural "%count could not be deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 no ha podido ser elminidado"
+msgstr[1] "%count no han podido ser elminidados"
 
 #: CRM/Activity/Form/Task/Delete.php CRM/Activity/Form/Task/FileOnCase.php
 #: CRM/Core/Error.php js/Common.js js/crm.ajax.js js/crm.backbone.js
@@ -1331,8 +1331,8 @@ msgstr "Remover Etiquetas de Actividades"
 #: CRM/Activity/Form/Task/RemoveFromTag.php
 msgid "%count activity un-tagged"
 msgid_plural "%count activities un-tagged"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count actividad sin etiqueta"
+msgstr[1] "%count actividades sin etiqueta"
 
 #: CRM/Activity/Form/Task/RemoveFromTag.php
 msgid "1 activity already did not have this tag"
@@ -4455,8 +4455,8 @@ msgstr "Valor duplicado para el identificador externo."
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Contact Subtype field of 1 contact has not been updated."
 msgid_plural "Contact Subtype field of %count contacts has not been updated."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "El campo subtipo del contacto no ha sido actualizado."
+msgstr[1] "El campo subtipo de contacto de %count contactos no ha sido actualizado."
 
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Invalid Subtype"
@@ -5678,7 +5678,7 @@ msgstr "Sitio no soportado"
 
 #: CRM/Core/BAO/Address.php
 msgid "You seem to have deleted the relationship type 'Household Member of'"
-msgstr ""
+msgstr "Parece que ha eliminado el tipo de relación 'Miembro de la familia'"
 
 #: CRM/Core/BAO/Address.php
 msgid ""
@@ -7162,11 +7162,11 @@ msgstr "¿Trabajo está activo?"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Job Log ID"
-msgstr ""
+msgstr "Identificador del log de trabajos"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Timestamp"
-msgstr ""
+msgstr "Fecha y hora"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Command"
@@ -8566,11 +8566,11 @@ msgstr "El pago de suscripción ha fallado - %1"
 msgid ""
 "Recurring contribution appears to have been re-assigned from id %1 to %2, "
 "continuing with %2."
-msgstr ""
+msgstr "La contribución recurrente parece haber sido reasignada del id %1 al %2, continuando con %2."
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Could not find contributionRecur id"
-msgstr ""
+msgstr "No se ha podido encontrar el id del contributionRecur"
 
 #: CRM/Core/Payment/BaseIPN.php CRM/Core/Payment/GoogleIPN.php
 msgid "Online Contribution"
@@ -8945,11 +8945,11 @@ msgstr "Nombre del banco"
 
 #: CRM/Core/Payment.php
 msgid "No active instances of payment processor %1 were found."
-msgstr ""
+msgstr "No se han encontrado instancias activas del procesador de pago %1."
 
 #: CRM/Core/Payment.php
 msgid "No active instances of payment processor '%1' were found."
-msgstr ""
+msgstr "No se han encontrado instancias activas del procesador de pago %1."
 
 #: CRM/Core/Permission.php CRM/Logging/ReportDetail.php
 #: templates/CRM/common/joomla.tpl templates/CRM/common/print.tpl
@@ -9291,15 +9291,15 @@ msgstr "Permitir a los usuarios ver / descargar sus propias facturas"
 
 #: CRM/Core/Permission.php
 msgid "edit api keys"
-msgstr ""
+msgstr "editar api keys"
 
 #: CRM/Core/Permission.php
 msgid "Edit API keys"
-msgstr ""
+msgstr "Editar api keys"
 
 #: CRM/Core/Permission.php
 msgid "edit own api keys"
-msgstr ""
+msgstr "Editas Api keys propias"
 
 #: CRM/Core/Permission.php
 msgid "Edit user's own API keys"
@@ -10026,14 +10026,14 @@ msgstr "Cancelado"
 #: CRM/Core/SelectValues.php
 msgid "hour"
 msgid_plural "hours"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "hora"
+msgstr[1] "horas"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "week"
 msgid_plural "weeks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "semana"
+msgstr[1] "semanas"
 
 #: CRM/Core/ShowHideBlocks.php templates/CRM/Custom/Form/Optionfields.tpl
 #: templates/CRM/Price/Form/OptionFields.tpl
