--- a/po/de_DE/provinces.po
+++ b/po/de_DE/provinces.po
@@ -5,6 +5,7 @@
 # Translators:
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
+# Ettore Atalan <atalanttore@googlemail.com>, 2016
 # Fabian <schuttenberg@systopia.de>, 2016
 # Michal Seidler, 2011
 # Martin Peth <peth@systopia.de>, 2015
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-16 08:18+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15732,11 +15733,11 @@ msgstr ""
 
 msgctxt "province"
 msgid "Phuket"
-msgstr ""
+msgstr "Phuket"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
-msgstr ""
+msgstr "Nordösterbotten"
 
 msgctxt "province"
 msgid "Telangana"
