--- a/po/de_DE/menu.po
+++ b/po/de_DE/menu.po
@@ -10,7 +10,7 @@
 # Christoph Cheauré <transifex@w.roteskreuz.at>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
-# Ettore Atalan <atalanttore@googlemail.com>, 2015
+# Ettore Atalan <atalanttore@googlemail.com>, 2015-2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Finn F <ffmoto95@gmail.com>, 2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
@@ -30,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-30 07:30+0000\n"
-"Last-Translator: Finn F <ffmoto95@gmail.com>\n"
+"PO-Revision-Date: 2016-08-16 08:15+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2176,7 +2176,7 @@ msgstr "Zahlungsmethoden"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "CKEditor konfigurieren"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2184,7 +2184,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "CiviCRM-Inhalt einfügen"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
