--- a/po/de_DE/member.po
+++ b/po/de_DE/member.po
@@ -9,7 +9,7 @@
 # Benny Doe <s71664@htw-dresden.de>, 2016
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
-# Ettore Atalan <atalanttore@googlemail.com>, 2014
+# Ettore Atalan <atalanttore@googlemail.com>, 2014,2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Finn F <ffmoto95@gmail.com>, 2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-08 13:59+0000\n"
-"Last-Translator: Andreas Müller <mueller@democracy-international.org>\n"
+"PO-Revision-Date: 2016-08-16 08:24+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -264,7 +264,7 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipStatus.php
 msgid "Membership Status ID"
-msgstr ""
+msgstr "Mitgliedschaftsstatuskennung"
 
 #: CRM/Member/DAO/MembershipStatus.php CRM/Member/Form/MembershipStatus.php
 #: templates/CRM/Member/Page/MembershipStatus.tpl
@@ -310,7 +310,7 @@ msgstr "Ist reserviert"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type ID"
-msgstr ""
+msgstr "Mitgliedschaftstypenkennung"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Domain"
@@ -674,7 +674,7 @@ msgstr ""
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid "Includes %1 amount of %2"
-msgstr ""
+msgstr "Enthält %1 Menge von %2"
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid "Renewal Membership Organization and Type"
@@ -971,23 +971,23 @@ msgstr ""
 
 #: CRM/Member/Info.php
 msgid "View memberships"
-msgstr ""
+msgstr "Mitgliedschaften ansehen"
 
 #: CRM/Member/Info.php
 msgid "edit memberships"
-msgstr ""
+msgstr "Mitgliedschaften bearbeiten"
 
 #: CRM/Member/Info.php
 msgid "Create and update memberships"
-msgstr ""
+msgstr "Mitgliedschaften erstellen und aktualisieren"
 
 #: CRM/Member/Info.php
 msgid "delete in CiviMember"
-msgstr ""
+msgstr "In CiviMember löschen"
 
 #: CRM/Member/Info.php
 msgid "Delete memberships"
-msgstr ""
+msgstr "Mitgliedschaften löschen"
 
 #: CRM/Member/Info.php
 msgid "Your Membership(s)"
@@ -2307,15 +2307,15 @@ msgstr "Diese Mitgliedschaft wird automatisch verlängert. Sie können die autom
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden"
-msgstr ""
+msgstr "Mitgliedschaftsstatus ist überschrieben"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is NOT Overriden"
-msgstr ""
+msgstr "Mitgliedschaftsstatus ist NICHT überschrieben"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden?"
-msgstr ""
+msgstr "Ist Mitgliedschaftsstatus überschrieben?"
 
 #: CRM/Member/DAO/Membership.php
 msgid "Membership Recurring Contribution"
@@ -2373,7 +2373,7 @@ msgstr ""
 #: CRM/Member/Form/Task/Batch.php CRM/Member/Form/Task/PickProfile.php
 #: CRM/Member/Task.php
 msgid "Update multiple memberships"
-msgstr ""
+msgstr "Mehrfache Mitgliedschaften aktualisieren"
 
 #: CRM/Member/Form/Task/Batch.php
 msgid ""
@@ -2398,7 +2398,7 @@ msgstr ""
 
 #: CRM/Member/Task.php
 msgid "Export members"
-msgstr ""
+msgstr "Mitglieder exportieren"
 
 #: CRM/Member/Task.php
 msgid "PDF letters - print for memberships"
