--- a/po/de_DE/report.po
+++ b/po/de_DE/report.po
@@ -7,7 +7,7 @@
 # translatosaurus <accounts@drexler.eu>, 2012
 # Birdiebln <birdiebln@gmail.com>, 2014-2015
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
-# Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
+# Ettore Atalan <atalanttore@googlemail.com>, 2014-2016
 # Fabian <schuttenberg@systopia.de>, 2013-2016
 # Michal Seidler, 2011, 2012
 # Jo <jo@caj-augsburg.de>, 2012
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-08-16 08:19+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -47,7 +47,7 @@ msgstr "Berichte Vorgangstitel"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report template ID"
-msgstr ""
+msgstr "Berichtsvorlagenkennung"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report instance Name"
