--- a/po/de_DE/pcp.po
+++ b/po/de_DE/pcp.po
@@ -6,6 +6,7 @@
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2012,2014
 # pantteri, 2013
+# Ettore Atalan <atalanttore@googlemail.com>, 2016
 # Fabian <schuttenberg@systopia.de>, 2015-2016
 # Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # Michal Seidler, 2012
@@ -19,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-11 14:05+0000\n"
-"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
+"PO-Revision-Date: 2016-08-16 08:24+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -227,7 +228,7 @@ msgstr "Bearbeiten Sie Ihre persönliche Kampagnenseite"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Welcome"
-msgstr ""
+msgstr "Willkommen"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
