--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -7,7 +7,7 @@
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012-2013
-# Ettore Atalan <atalanttore@googlemail.com>, 2015
+# Ettore Atalan <atalanttore@googlemail.com>, 2015-2016
 # Fabian <schuttenberg@systopia.de>, 2013-2015
 # Finn F <ffmoto95@gmail.com>, 2016
 # Freddy Koschinsky <schollator@burning.name>, 2013
@@ -29,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-11 14:02+0000\n"
-"Last-Translator: Frederik Bugglin <frederik.bugglin@gmail.com>\n"
+"PO-Revision-Date: 2016-08-16 08:51+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -206,7 +206,7 @@ msgstr "Newsletter Elemente Body HTML"
 #: CRM/Mailing/DAO/Component.php CRM/Mailing/DAO/Mailing.php
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Body Text"
-msgstr ""
+msgstr "Inhaltstext"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component is Default?"
@@ -2364,7 +2364,7 @@ msgstr "Dinge, welche in einem Test Newsletter zu prüfen sind:"
 msgid ""
 "Verify the content and formatting looks consistent across various email "
 "clients."
-msgstr "Verifizieren sie, dass Inhalt und Formatierung der E-Mail clients übereinstimmt. "
+msgstr "Überprüfen Sie, ob der Inhalt und die Formatierung in mehreren E-Mail-Clienten gleich aussieht."
 
 #: templates/CRM/Mailing/Page/Browse.hlp
 msgid ""
