po: update po/ca_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-02 15:06+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-08-18 15:02+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -470,7 +470,7 @@ msgstr "Títol de la pàgina d'agraïment"
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "Allow sharing through social media?"
-msgstr "Permet compartir a través de mitjans de comunicació socials?"
+msgstr "Permet compartir a través de les xarxes socials?"
 
 #: CRM/Campaign/Form/Survey/Results.php
 #: CRM/Report/Form/Campaign/SurveyDetails.php
