--- a/po/ca_ES/member.po
+++ b/po/ca_ES/member.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 16:21+0000\n"
+"PO-Revision-Date: 2016-08-18 11:49+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1157,7 +1157,7 @@ msgstr ""
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Select Membership Organization and then Membership Type."
-msgstr "Selecciona l'organització de pertinença i després el tipus de pertinença"
+msgstr "Selecciona l'organització d'afiliació i després el tipus d'afiliació."
 
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipType.tpl
@@ -1168,11 +1168,11 @@ msgstr "Màxim nombre de pertinences relacionades (deixeu-ho en blanc per il·li
 msgid ""
 "Set the membership end date this many membership periods from now. Make sure"
 " the appropriate corresponding fee is entered below."
-msgstr "Establir com a data de finalització de l'afiliació aquest nombre de períodes des de la data actual. Assegurar-se d'assignar la cuota corresponent."
+msgstr "Calcula la data de finalització de l'afiliació segons aquest nombre de períodes des de la data actual. Assegurar-se d'assignar la cuota corresponent."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Source of this membership. This value is searchable."
-msgstr "Font de l'afiliació. Aquest camp és cercable"
+msgstr "Font de l'afiliació. Aquest camp és cercable."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "When did this contact first become a member?"
@@ -2170,14 +2170,14 @@ msgid ""
 "your configured membership status rules. However, if you want to assign a "
 "status manually and bypass automated status setting, check this box. Then "
 "you can select from the available status options."
-msgstr ""
+msgstr "La condició d'afiliat s'assigna i s'actualitza automàticament en base a les regles d'estat de l'afiliació. No obstant, si desitja assignar un estat de forma manual i obviar l'ajust automàtic de l'estat, marqueu aquesta casella. A continuació, pot seleccionar entre les opcions d'estat disponibles."
 
 #: templates/CRM/Member/Page/Tab.hlp
 msgid ""
 "The status you assign will remain in force, unless it is again modified on "
 "this screen. As long as the Status Override flag is checked, the automated "
 "membership status update script will NOT update this membership record."
-msgstr ""
+msgstr "L'estat que s'assigni es mantindrà en vigor, a menys que es modifiqui novament en aquesta pantalla. Sempre que la casella de l'estat sobreescrit estigui activada, l'automatització de l'actualització de l'estat de l'afiliació no s'executarà en aquest registre."
 
 #: templates/CRM/Member/Page/Tab.hlp
 msgid ""
