--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-10 22:26+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-08-18 11:23+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5057,7 +5057,7 @@ msgstr "Delimitador dels camps d'importació"
 #: CRM/Contact/Import/Form/DataSource.php
 #: templates/CRM/Contact/Import/Form/DataSource.tpl
 msgid "Choose Data Source"
-msgstr "Elecció de l'orígen de les dades"
+msgstr "Elecció de la font de les dades"
 
 #: CRM/Contact/Import/Form/Preview.php
 msgid "Name for new group"
