po: update po/ca_ES/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 12:05+0000\n"
+"PO-Revision-Date: 2016-08-18 15:42+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -230,7 +230,7 @@ msgstr "mostra la ubicació"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "Rol per defecte"
 
 #: CRM/Event/DAO/Event.php
 msgid "Confirmation Title"
@@ -1938,7 +1938,7 @@ msgid ""
 "waitlist work-flow (click the pencil icon, or navigate to Administer » "
 "CiviEvent » Participant Statuses). Then reload this form and check 'Offer a "
 "Waitlist?'."
-msgstr ""
+msgstr "Es pot permetre als usuaris unir-se a una llista d'espera quan l'esdeveniment es troba ple. Per activar aquesta funció, s'han d'activar primer els estats dels participants que s'utilitzen en el fluxe de treball de la llista d'espera (fes clic a l'icona del llàpis, o navega pel menú fins a Administrar » CiviEvent » Estat del participant). A continuació, recarrega la pàgina i comprova si s'ofereix la llista d'espera."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -1946,7 +1946,7 @@ msgid ""
 "Message&quot' is displayed when the maximum number of registrations is "
 "reached. Only participants with status types marked as 'counted' are "
 "included when checking if the event is full."
-msgstr ""
+msgstr "Altrament, quan s'hagi assolit el número màxim d'inscrits, el botó d'inscripció estarà ocult i es mostrarà el missatge &quot;L'esdeveniment està complet&quot'. Només quan els participants es marquin com a 'comptabilitzats' s'inclouran per comprobar si l'esdeveniment està complet."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Event-Full Message"
@@ -1983,7 +1983,7 @@ msgid ""
 "Include map presenting event location on event information page? (A map "
 "provider must be configured under <a href='%1'>Administer > System Settings "
 "> Mapping and Geocoding</a>)"
-msgstr ""
+msgstr "Incloure el mapa per a mostrar la ubicació a la pàgina d'informació de l'esdeveniment? (Un proveïdor de mapes ha d'estar configurat a <a href='%1'>Administració > Configuració del sistema > Cartografia i geocodificació</a>)"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Public Events"
@@ -1993,19 +1993,19 @@ msgstr "Esdeveniments públics"
 msgid ""
 "When enabled, this event will be included in iCalendar feeds and displayed "
 "on your site's \"Upcoming Events\" block."
-msgstr ""
+msgstr "Quan estigui habilitat, aquest esdeveniment s'inclourà a iCalendar i es mostrarà al lloc web \"Propers esdeveniments\"."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
 "When enabled, links allowing people to share this event with their social "
 "network will be displayed (e.g. Facebook \"Like\", Google+, and Twitter)."
-msgstr ""
+msgstr "Quan està habilitat, els enllaços permeten compartir aquest esdeveniment amb les xarxes socials que es mostren (Per exemple Facebook \"Like\", Google+, i Twiter)."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
 "Social media links will be included on the Event Info page, Thank-you page, "
 "Tell-a-Friend page (if enabled), and in event confirmation emails."
-msgstr ""
+msgstr "Els enllaços a les xarxes socials s'inclouran a la pàgina d'informació de l'esdeveniment, a la pàgina d'agraïment, a la d'envia a un amic/ga(si està habilitada) i als correus electrònics de confirmació."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.tpl
 msgid ""
