po: update po/es_ES/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/member.po
+++ b/po/es_ES/member.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-26 15:57+0000\n"
+"PO-Revision-Date: 2016-08-18 11:50+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -2178,14 +2178,14 @@ msgid ""
 "your configured membership status rules. However, if you want to assign a "
 "status manually and bypass automated status setting, check this box. Then "
 "you can select from the available status options."
-msgstr "Condición de miembro se asigna y se actualiza automáticamente sobre la base las reglas de estado de Membresíade. Sin embargo, si desea asignar un estado de forma manual y ajuste de estado de bypass automático, marque esta casilla. A continuación, puede seleccionar entre las opciones de estado disponibles."
+msgstr "La condición de miembro se asigna y se actualiza automáticamente en base a las reglas de estado de la membresía. Sin embargo, si desea asignar un estado de forma manual y obviar el ajuste automático de estados, marque esta casilla. A continuación, puede seleccionar entre las opciones de estado disponibles."
 
 #: templates/CRM/Member/Page/Tab.hlp
 msgid ""
 "The status you assign will remain in force, unless it is again modified on "
 "this screen. As long as the Status Override flag is checked, the automated "
 "membership status update script will NOT update this membership record."
-msgstr "El estado que usted asigna se mantendrá en vigor, a menos que sea modificada nuevamente en esta pantalla. Siempre y cuando la bandera de modificación de estado está activada, la automatización de la actualización del estado de membresía  no se actualizará este registro de Membresía."
+msgstr "El estado que usted asigna se mantendrá en vigor, a menos que sea modificada nuevamente en esta pantalla. Siempre y cuando la casilla de estado sobreescrito esté activada, la automatización de la actualización del estado de membresía no se ejecutará en este registro."
 
 #: templates/CRM/Member/Page/Tab.hlp
 msgid ""
