po: update po/es_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -31,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-09 04:49+0000\n"
-"Last-Translator: Ana Poveda <anaemiliapp@hotmail.com>\n"
+"PO-Revision-Date: 2016-08-18 11:36+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -794,7 +794,7 @@ msgid ""
 "active events. The code is an alpha state, and you will potentially need to "
 "have developer resources to debug and fix sections of the codebase while "
 "testing and deploying it. %1"
-msgstr "Esta característica permite a los usuarios registrarse para más de un evento a la vez. Cuando está activada, los usuarios podraán añadir evento (s) en un \"carrito\" y luego pagar por ellos simultaneamente. Habilitar esta opción puede afectar el registro en línea para todos los eventos activos. El código está en estado alfa, y que potencialmente tendrá que tener recursos de desarrolladores para depurar y arreglar las secciones del código fuente mientras prueba e implementa. %1"
+msgstr "Esta característica permite a los usuarios registrarse en más de un evento a la vez. Cuando está activada, los usuarios podrán añadir evento(s) en un \"carrito\" y luego pagar por ellos de forma conjunta. Habilitar esta opción puede afectar el registro en línea para todos los eventos activos. El código está en estado alfa, y probablemente necesitará disponer de desarrolladores para depurar y arreglar las secciones del código fuente mientras prueba e implementa. %1"
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "Dashboard entries"
